[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Custom/Border.png" type="Texture" id=1]
[ext_resource path="res://Assets/Custom/radar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Custom/right.png" type="Texture" id=3]
[ext_resource path="res://UI/MiniMap.gd" type="Script" id=4]
[ext_resource path="res://Assets/Custom/import.png" type="Texture" id=5]
[ext_resource path="res://Assets/Custom/export.png" type="Texture" id=6]

[node name="MiniMap" type="MarginContainer" groups=["minimap"]]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 295.0
custom_constants/margin_right = 55
custom_constants/margin_top = 55
custom_constants/margin_left = 55
custom_constants/margin_bottom = 55

[node name="BG" type="NinePatchRect" parent="MarginContainer"]
margin_left = 55.0
margin_top = 55.0
margin_right = 235.0
margin_bottom = 235.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/BG"]
position = Vector2( 50, 50 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="PickupMarker" type="Sprite" parent="MarginContainer/BG"]
visible = false
position = Vector2( 89, 53 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="DropMarker" type="Sprite" parent="MarginContainer/BG"]
visible = false
position = Vector2( 91, 86 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Border" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 295.0
texture = ExtResource( 1 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
